[gd_scene load_steps=24 format=2]

[ext_resource path="res://VFX/Sprites/tooth-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tooth.gd" type="Script" id=2]
[ext_resource path="res://SFX/Sounds/pickupCoin.wav" type="AudioStream" id=3]
[ext_resource path="res://SFX/Sounds/move.wav" type="AudioStream" id=4]
[ext_resource path="res://SFX/Sounds/plastic-squeak2-103383.mp3" type="AudioStream" id=5]
[ext_resource path="res://SFX/Sounds/plastic-shake-5-38187.mp3" type="AudioStream" id=6]
[ext_resource path="res://SFX/Sounds/pop2-84862.mp3" type="AudioStream" id=7]
[ext_resource path="res://SFX/Sounds/collapse.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/Sounds/thud.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/Sounds/cash-register-kaching-sound-effect-125042.mp3" type="AudioStream" id=10]
[ext_resource path="res://SFX/Sounds/cartoon_wink_magic_sparkle-6896.mp3" type="AudioStream" id=11]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 8.0

[sub_resource type="Animation" id=5]
resource_name = "dirty_1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "dirty_2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
resource_name = "dirty_3"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}

[sub_resource type="Animation" id=4]
resource_name = "empty"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=3]
resource_name = "grow"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_jump_sfx"
}, {
"args": [  ],
"method": "idle"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=9]
resource_name = "remove"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2, 0.3, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 9, 10, 11, 12, 13, 14, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_jump_sfx"
}, {
"args": [  ],
"method": "play_dollar_sfx"
}, {
"args": [  ],
"method": "empty"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "rotted"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=10]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "wiggle_large"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -2, 0 ), Vector2( 2, 0 ), Vector2( -2, 0 ), Vector2( 2, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "wiggle_small"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 0 ), Vector2( 1, 0 ) ]
}

[node name="Tooth" type="Area2D" groups=["tooth"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -18 )
hframes = 15
frame = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/dirty_1 = SubResource( 5 )
anims/dirty_2 = SubResource( 6 )
anims/dirty_3 = SubResource( 7 )
anims/empty = SubResource( 4 )
anims/grow = SubResource( 3 )
anims/idle = SubResource( 2 )
anims/remove = SubResource( 9 )
anims/rotted = SubResource( 8 )

[node name="WiggleAnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/idle = SubResource( 10 )
anims/wiggle_large = SubResource( 12 )
anims/wiggle_small = SubResource( 11 )

[node name="Timers" type="Node" parent="."]

[node name="RotTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="BrushTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 0.4
one_shot = true

[node name="PullTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
wait_time = 1.2
one_shot = true

[node name="InitRotTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="DelayTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="BrushSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 4 )
volume_db = -5.0
pitch_scale = 0.8

[node name="PullSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 5 )
volume_db = 3.0

[node name="CoinSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 3 )

[node name="DollarSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 10 )
volume_db = 12.0

[node name="JumpSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 7 )

[node name="RattleSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 6 )
volume_db = 10.0

[node name="RotSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 9 )

[node name="DieSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 8 )

[node name="SparkleSFX" type="AudioStreamPlayer" parent="SFX"]
unique_name_in_owner = true
stream = ExtResource( 11 )
volume_db = 12.0

[connection signal="input_event" from="." to="." method="_on_Tooth_input_event"]
[connection signal="mouse_exited" from="." to="." method="_on_Tooth_mouse_exited"]
[connection signal="timeout" from="Timers/RotTimer" to="." method="_on_RotTimer_timeout"]
[connection signal="timeout" from="Timers/BrushTimer" to="." method="_on_BrushTimer_timeout"]
[connection signal="timeout" from="Timers/PullTimer" to="." method="_on_PullTImer_timeout"]
[connection signal="timeout" from="Timers/InitRotTimer" to="." method="_on_InitRotTimer_timeout"]
[connection signal="timeout" from="Timers/DelayTimer" to="." method="_on_DelayTimer_timeout"]
